--- a/react_redux_ts/package.json
+++ b/react_redux_ts/package.json
@@ -9,6 +9,8 @@
   "author": "rei-m",
   "license": "MIT",
   "devDependencies": {
+    "@types/react-redux": "^4.4.40",
+    "@types/redux": "^3.6.0",
     "awesome-typescript-loader": "^3.1.3",
     "source-map-loader": "^0.2.1",
     "typescript": "^2.3.2",
@@ -19,6 +21,8 @@
     "@types/react": "^15.0.23",
     "@types/react-dom": "^15.5.0",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0"
   }
 }
