--- a/react_redux_ts/package.json
+++ b/react_redux_ts/package.json
@@ -13,6 +13,8 @@
     "@types/redux": "^3.6.0",
     "awesome-typescript-loader": "^3.1.3",
     "source-map-loader": "^0.2.1",
+    "tslint": "^5.1.0",
+    "tslint-loader": "^3.5.3",
     "typescript": "^2.3.2",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5"
