--- a/react_redux_ts/package.json
+++ b/react_redux_ts/package.json
@@ -15,6 +15,7 @@
     "source-map-loader": "^0.2.1",
     "tslint": "^5.1.0",
     "tslint-loader": "^3.5.3",
+    "tslint-react": "^3.0.0",
     "typescript": "^2.3.2",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5"
