--- a/react_redux_ts/package.json
+++ b/react_redux_ts/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "tcm": "tcm src/components"
   },
   "author": "rei-m",
   "license": "MIT",
@@ -12,10 +13,15 @@
     "@types/react-redux": "^4.4.40",
     "@types/redux": "^3.6.0",
     "awesome-typescript-loader": "^3.1.3",
+    "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "source-map-loader": "^0.2.1",
+    "style-loader": "^0.16.1",
     "tslint": "^5.1.0",
     "tslint-loader": "^3.5.3",
     "tslint-react": "^3.0.0",
+    "typed-css-modules": "^0.2.0",
+    "typed-css-modules-loader": "^0.0.9",
     "typescript": "^2.3.2",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5"
